2007-01-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreInputUnit.cpp: Allowed ports to
	pass on interrupt signal.

	* src/libYARP_dev/src/opencv_grabber: Made driver pay attention 
	to width, height.

	* src/libYARP_OS/src/ffmpeg: Added FfmpegWriter as basic
	interface to ffmpeg's media writing capability.

2007-01-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Contactable.h: Exposed input
	and output connection counts for Ports and BufferedPorts.

	* example/external/nameclient.cpp: Added an example of accessing
	the yarp name client using UNIX-style native tcp socket 
	interface, rather than ACE+YARP.  This was in response to
	questions from someone evaluating YARP.

	* src/libYARP_dev/src/opencv_grabber: Added --loop option for
	opencv_grabber, per Alex Bernardino's suggestion.

2006-12-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ThreadImpl.cpp: fixed behavior of threads
	that shut down immediately.

	* src/libYARP_OS/src/BottleImpl.cpp: sundry small improvements.


2006-12-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: fixed some gaps in 
	text-mode quoting for bottles

	* src/libYARP_OS/src/Vector.cpp: fixed constructor bug #1601862

2006-12-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig: Lots of small improvements - hopefully I 
	didn't break anything

2006-12-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/CMakeLists.txt: device library is now
	compiled by default - but specific devices are not built
	in unless specifically asked for.  From a user's perspective,
	not much has changed, but now downstream users can rely
	on libYARP_dev and yarpdev existing.

2006-12-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: updated to remove a new function clash

	* example/swig/FindJNI.cmake: updated by Assif to work on
	Ubuntu.
